--- a/pages/ambiental.html
+++ b/pages/ambiental.html
@@ -8,9 +8,9 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/styles/nav.css" />
-    <link rel="stylesheet" href="/styles/footer.css" />
-    <link rel="stylesheet" href="/styles/ambEcoSoc.css" />
+    <link rel="stylesheet" href="../styles/nav.css" />
+    <link rel="stylesheet" href="../styles/footer.css" />
+    <link rel="stylesheet" href="../styles/ambEcoSoc.css" />
     <title>Aspetos Ambientais</title>
   </head>
   <body>
@@ -24,10 +24,10 @@
       <div class="opcoes">
         <nav>
           <ul>
-            <li><a href="../home.html">home</a></li>
+            <li><a href="./home.html">home</a></li>
             <li><a href="./sobre-nos.html">Sobre Nós</a></li>
-            <li><a href="../pages/menu.html">Menu</a></li>
-            <li><a href="../playlist.html">Playlist</a></li>
+            <li><a href="./menu.php">Menu</a></li>
+            <li><a href="./playlist.html">Playlist</a></li>
           </ul>
           <div class="linha"></div>
         </nav>
@@ -43,25 +43,25 @@
               </li>
               <li class="show-movel"><a href="">Menu</a></li>
               <li class="show-movel">
-                <a href="../pages/playlist.html">Playlist</a>
+                <a href="./playlist.html">Playlist</a>
               </li>
               <li>
-                <a href="../pages/topicoUm.html">Tópico 1</a>
+                <a href="./topicoUm.html">Tópico 1</a>
               </li>
               <li>
-                <a href="../pages/topicoDois.html">Tópico 2</a>
+                <a href="./topicoDois.html">Tópico 2</a>
               </li>
               <li>
-                <a href="../pages/topicoTres.html">Tópico 3</a>
+                <a href="./topicoTres.html">Tópico 3</a>
               </li>
               <li>
-                <a href="../pages/topicoQuatro.html">Tópico 4</a>
+                <a href="./topicoQuatro.html">Tópico 4</a>
               </li>
               <li>
-                <a href="../pages/topicoCinco.html">Tópico 5</a>
+                <a href="./topicoCinco.html">Tópico 5</a>
               </li>
               <li>
-                <a href="../pages/topicoSeis.html">Tópico 6</a>
+                <a href="./topicoSeis.html">Tópico 6</a>
               </li>
               <li>
                 <a href="">Tópico 7</a>
@@ -74,60 +74,73 @@
         </div>
       </div>
     </header>
-    
+
     <main>
-        <header>
-            <img src="../images/de-volta.png" alt="Voltar" class="back-icon" onclick="history.back()">
-            <h2>Aspetos Ambientais da PARJA LDA</h2>
-        </header>
-        <section>
-            <h3>Estruturais e de Design</h3>
-            <ul>
-                <li>Iluminação LED e aproveitamento de luz natural.</li>
-                <li>Uso de materiais reciclados para móveis e decoração.</li>
-                <li>Isolamento térmico para eficiência energética.</li>
-            </ul>
-        </section>
-        <section>
-            <h3>Gestão de Resíduos</h3>
-            <ul>
-                <li>Sistema de coleta seletiva para reciclagem.</li>
-                <li>Compostagem de resíduos orgânicos, como borras de café.</li>
-                <li>Redução de descartáveis com utensílios reutilizáveis.</li>
-            </ul>
-        </section>
-        <section>
-            <h3>Economia de Recursos</h3>
-            <ul>
-                <li>Uso de torneiras com sensores para economia de água.</li>
-                <li>Sistemas de reaproveitamento de água da chuva.</li>
-                <li>Aparelhos eficientes, como cafeteiras com selo A de consumo energético.</li>
-            </ul>
-        </section>
-        <section>
-            <h3>Ambiente Verde</h3>
-            <ul>
-                <li>Plantas naturais no espaço, como samambaias e lírios-da-paz.</li>
-                <li>Jardim vertical para purificação do ar.</li>
-                <li>Espaços temáticos com elementos sustentáveis.</li>
-            </ul>
-        </section>
-        <section>
-            <h3>Produtos Sustentáveis</h3>
-            <ul>
-                <li>Uso de café orgânico e comércio justo.</li>
-                <li>Opções de leites vegetais e alimentos veganos.</li>
-                <li>Embalagens biodegradáveis para pedidos para viagem.</li>
-            </ul>
-        </section>
-        <section>
-            <h3>Conexão com a Comunidade</h3>
-            <ul>
-                <li>Parcerias com produtores locais para reduzir emissões.</li>
-                <li>Eventos de conscientização ambiental, como oficinas de reciclagem.</li>
-                <li>Promoção de ações sustentáveis com descontos para práticas ecológicas.</li>
-            </ul>
-        </section>
+      <header>
+        <img
+          src="../images/de-volta.png"
+          alt="Voltar"
+          class="back-icon"
+          onclick="history.back()"
+        />
+        <h2>Aspetos Ambientais da PARJA LDA</h2>
+      </header>
+      <section>
+        <h3>Estruturais e de Design</h3>
+        <ul>
+          <li>Iluminação LED e aproveitamento de luz natural.</li>
+          <li>Uso de materiais reciclados para móveis e decoração.</li>
+          <li>Isolamento térmico para eficiência energética.</li>
+        </ul>
+      </section>
+      <section>
+        <h3>Gestão de Resíduos</h3>
+        <ul>
+          <li>Sistema de coleta seletiva para reciclagem.</li>
+          <li>Compostagem de resíduos orgânicos, como borras de café.</li>
+          <li>Redução de descartáveis com utensílios reutilizáveis.</li>
+        </ul>
+      </section>
+      <section>
+        <h3>Economia de Recursos</h3>
+        <ul>
+          <li>Uso de torneiras com sensores para economia de água.</li>
+          <li>Sistemas de reaproveitamento de água da chuva.</li>
+          <li>
+            Aparelhos eficientes, como cafeteiras com selo A de consumo
+            energético.
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3>Ambiente Verde</h3>
+        <ul>
+          <li>Plantas naturais no espaço, como samambaias e lírios-da-paz.</li>
+          <li>Jardim vertical para purificação do ar.</li>
+          <li>Espaços temáticos com elementos sustentáveis.</li>
+        </ul>
+      </section>
+      <section>
+        <h3>Produtos Sustentáveis</h3>
+        <ul>
+          <li>Uso de café orgânico e comércio justo.</li>
+          <li>Opções de leites vegetais e alimentos veganos.</li>
+          <li>Embalagens biodegradáveis para pedidos para viagem.</li>
+        </ul>
+      </section>
+      <section>
+        <h3>Conexão com a Comunidade</h3>
+        <ul>
+          <li>Parcerias com produtores locais para reduzir emissões.</li>
+          <li>
+            Eventos de conscientização ambiental, como oficinas de reciclagem.
+          </li>
+          <li>
+            Promoção de ações sustentáveis com descontos para práticas
+            ecológicas.
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer>
