--- a/pages/economico.html
+++ b/pages/economico.html
@@ -8,9 +8,9 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/styles/nav.css" />
-    <link rel="stylesheet" href="/styles/footer.css" />
-    <link rel="stylesheet" href="/styles/ambEcoSoc.css" />
+    <link rel="stylesheet" href="../styles/nav.css" />
+    <link rel="stylesheet" href="../styles/footer.css" />
+    <link rel="stylesheet" href="../styles/ambEcoSoc.css" />
     <title>Aspetos Ambientais</title>
   </head>
   <body>
@@ -24,10 +24,10 @@
       <div class="opcoes">
         <nav>
           <ul>
-            <li><a href="../home.html">home</a></li>
+            <li><a href="./home.html">home</a></li>
             <li><a href="./sobre-nos.html">Sobre Nós</a></li>
-            <li><a href="../pages/menu.html">Menu</a></li>
-            <li><a href="../playlist.html">Playlist</a></li>
+            <li><a href="./menu.php">Menu</a></li>
+            <li><a href="./playlist.html">Playlist</a></li>
           </ul>
           <div class="linha"></div>
         </nav>
@@ -43,25 +43,25 @@
               </li>
               <li class="show-movel"><a href="">Menu</a></li>
               <li class="show-movel">
-                <a href="../pages/playlist.html">Playlist</a>
+                <a href="./playlist.html">Playlist</a>
               </li>
               <li>
-                <a href="../pages/topicoUm.html">Tópico 1</a>
+                <a href="./topicoUm.html">Tópico 1</a>
               </li>
               <li>
-                <a href="../pages/topicoDois.html">Tópico 2</a>
+                <a href="./topicoDois.html">Tópico 2</a>
               </li>
               <li>
-                <a href="../pages/topicoTres.html">Tópico 3</a>
+                <a href="./topicoTres.html">Tópico 3</a>
               </li>
               <li>
-                <a href="../pages/topicoQuatro.html">Tópico 4</a>
+                <a href="./topicoQuatro.html">Tópico 4</a>
               </li>
               <li>
-                <a href="../pages/topicoCinco.html">Tópico 5</a>
+                <a href="./topicoCinco.html">Tópico 5</a>
               </li>
               <li>
-                <a href="../pages/topicoSeis.html">Tópico 6</a>
+                <a href="./topicoSeis.html">Tópico 6</a>
               </li>
               <li>
                 <a href="">Tópico 7</a>
@@ -74,41 +74,56 @@
         </div>
       </div>
     </header>
-    
+
     <main>
-        <header>
-            <img src="../images/de-volta.png" alt="Voltar" class="back-icon" onclick="history.back()">
-            <h2>Viabilidade Econômica da PARJA LDA</h2>
-        </header>
-        <section>
-            <h3>Análise de Custos</h3>
-            <ul>
-                <li>Investimento inicial estimado em <strong>60.000 €</strong>, incluindo infraestrutura e equipamentos.</li>
-                <li>Custos operacionais mensais de aproximadamente <strong>3.000 €</strong>.</li>
-                <li>Parcerias com fornecedores locais para redução de custos logísticos.</li>
-            </ul>
-        </section>
-        <section>
-            <h3>Receitas Previstas</h3>
-            <ul>
-                <li>Previsão de 100 clientes por dia nos primeiros 6 meses.</li>
-                <li>Aumento gradual da clientela em 20% ao ano.</li>
-            </ul>
-        </section>
-        <section>
-            <h3>Margem de Lucro</h3>
-            <ul>
-                <li>Margem de lucro projetada em <strong>30%</strong> sobre os produtos.</li>
-                <li>Produtos premium (cafés especiais e sobremesas).</li>
-            </ul>
-        </section>
-        <section>
-            <h3>Perspetivas de Crescimento</h3>
-            <ul>
-                <li>Expansão para novas zonas após 2 anos de operação.</li>
-                <li>Oferta de cursos e workshops para gerar receita adicional.</li>
-            </ul>
-        </section>
+      <header>
+        <img
+          src="../images/de-volta.png"
+          alt="Voltar"
+          class="back-icon"
+          onclick="history.back()"
+        />
+        <h2>Viabilidade Econômica da PARJA LDA</h2>
+      </header>
+      <section>
+        <h3>Análise de Custos</h3>
+        <ul>
+          <li>
+            Investimento inicial estimado em <strong>60.000 €</strong>,
+            incluindo infraestrutura e equipamentos.
+          </li>
+          <li>
+            Custos operacionais mensais de aproximadamente
+            <strong>3.000 €</strong>.
+          </li>
+          <li>
+            Parcerias com fornecedores locais para redução de custos logísticos.
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3>Receitas Previstas</h3>
+        <ul>
+          <li>Previsão de 100 clientes por dia nos primeiros 6 meses.</li>
+          <li>Aumento gradual da clientela em 20% ao ano.</li>
+        </ul>
+      </section>
+      <section>
+        <h3>Margem de Lucro</h3>
+        <ul>
+          <li>
+            Margem de lucro projetada em <strong>30%</strong> sobre os produtos.
+          </li>
+          <li>Produtos premium (cafés especiais e sobremesas).</li>
+        </ul>
+      </section>
+      <section>
+        <h3>Perspetivas de Crescimento</h3>
+        <ul>
+          <li>Expansão para novas zonas após 2 anos de operação.</li>
+          <li>Oferta de cursos e workshops para gerar receita adicional.</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
