--- a/pages/topicoDois.html
+++ b/pages/topicoDois.html
@@ -8,9 +8,9 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/styles/nav.css" />
-    <link rel="stylesheet" href="/styles/footer.css" />
-    <link rel="stylesheet" href="/styles/topicoDois.css" />
+    <link rel="stylesheet" href="../styles/nav.css" />
+    <link rel="stylesheet" href="../styles/footer.css" />
+    <link rel="stylesheet" href="../styles/topicoDois.css" />
     <title>Tópico 2</title>
   </head>
   <body>
@@ -24,10 +24,10 @@
       <div class="opcoes">
         <nav>
           <ul>
-            <li><a href="../home.html">home</a></li>
+            <li><a href="./home.html">home</a></li>
             <li><a href="./sobre-nos.html">Sobre Nós</a></li>
-            <li><a href="../pages/menu.html">Menu</a></li>
-            <li><a href="../playlist.html">Playlist</a></li>
+            <li><a href="./menu.php">Menu</a></li>
+            <li><a href="./playlist.html">Playlist</a></li>
           </ul>
           <div class="linha"></div>
         </nav>
@@ -43,25 +43,25 @@
               </li>
               <li class="show-movel"><a href="">Menu</a></li>
               <li class="show-movel">
-                <a href="../pages/playlist.html">Playlist</a>
+                <a href="./playlist.html">Playlist</a>
               </li>
               <li>
-                <a href="../pages/topicoUm.html">Tópico 1</a>
+                <a href="./topicoUm.html">Tópico 1</a>
               </li>
               <li>
-                <a href="../pages/topicoDois.html">Tópico 2</a>
+                <a href="./topicoDois.html">Tópico 2</a>
               </li>
               <li>
-                <a href="../pages/topicoTres.html">Tópico 3</a>
+                <a href="./topicoTres.html">Tópico 3</a>
               </li>
               <li>
-                <a href="../pages/topicoQuatro.html">Tópico 4</a>
+                <a href="./topicoQuatro.html">Tópico 4</a>
               </li>
               <li>
-                <a href="../pages/topicoCinco.html">Tópico 5</a>
+                <a href="./topicoCinco.html">Tópico 5</a>
               </li>
               <li>
-                <a href="../pages/topicoSeis.html">Tópico 6</a>
+                <a href="./topicoSeis.html">Tópico 6</a>
               </li>
               <li>
                 <a href="">Tópico 7</a>
