--- a/pages/social.html
+++ b/pages/social.html
@@ -8,9 +8,9 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/styles/nav.css" />
-    <link rel="stylesheet" href="/styles/footer.css" />
-    <link rel="stylesheet" href="/styles/ambEcoSoc.css" />
+    <link rel="stylesheet" href="../styles/nav.css" />
+    <link rel="stylesheet" href="../styles/footer.css" />
+    <link rel="stylesheet" href="../styles/ambEcoSoc.css" />
     <title>Aspetos Ambientais</title>
   </head>
   <body>
@@ -24,10 +24,10 @@
       <div class="opcoes">
         <nav>
           <ul>
-            <li><a href="../home.html">home</a></li>
+            <li><a href="./home.html">home</a></li>
             <li><a href="./sobre-nos.html">Sobre Nós</a></li>
-            <li><a href="../pages/menu.html">Menu</a></li>
-            <li><a href="../playlist.html">Playlist</a></li>
+            <li><a href="./menu.php">Menu</a></li>
+            <li><a href="./playlist.html">Playlist</a></li>
           </ul>
           <div class="linha"></div>
         </nav>
@@ -43,25 +43,25 @@
               </li>
               <li class="show-movel"><a href="">Menu</a></li>
               <li class="show-movel">
-                <a href="../pages/playlist.html">Playlist</a>
+                <a href="./playlist.html">Playlist</a>
               </li>
               <li>
-                <a href="../pages/topicoUm.html">Tópico 1</a>
+                <a href="./topicoUm.html">Tópico 1</a>
               </li>
               <li>
-                <a href="../pages/topicoDois.html">Tópico 2</a>
+                <a href="./topicoDois.html">Tópico 2</a>
               </li>
               <li>
-                <a href="../pages/topicoTres.html">Tópico 3</a>
+                <a href="./topicoTres.html">Tópico 3</a>
               </li>
               <li>
-                <a href="../pages/topicoQuatro.html">Tópico 4</a>
+                <a href="./topicoQuatro.html">Tópico 4</a>
               </li>
               <li>
-                <a href="../pages/topicoCinco.html">Tópico 5</a>
+                <a href="./topicoCinco.html">Tópico 5</a>
               </li>
               <li>
-                <a href="../pages/topicoSeis.html">Tópico 6</a>
+                <a href="./topicoSeis.html">Tópico 6</a>
               </li>
               <li>
                 <a href="">Tópico 7</a>
@@ -74,47 +74,54 @@
         </div>
       </div>
     </header>
-    
+
     <main>
-        <header>
-            <img src="../images/de-volta.png" alt="Voltar" class="back-icon" onclick="history.back()">
-            <h2>Aspectos Sociais da PARJA LDA</h2>
-        </header>
-        <section>
-            <h3>Integração Comunitária</h3>
-            <ul>
-                <li>Parcerias com produtores locais para fortalecer a economia nacional.</li>
-                <li>Eventos culturais, como música ao vivo.</li>
-            </ul>
-        </section>
-        <section>
-            <h3>Inclusão Social</h3>
-            <ul>
-                <li>Ambiente acessível para pessoas com deficiência.</li>
-                <li>Equipa diversificada para promover igualdade e inclusão.</li>
-            </ul>
-        </section>
-        <section>
-            <h3>Educação</h3>
-            <ul>
-                <li>Workshops sobre sustentabilidade e práticas ecológicas.</li>
-                <li>Incentivo ao comércio justo.</li>
-            </ul>
-        </section>
-        <section>
-            <h3>Saúde e Bem-Estar</h3>
-            <ul>
-                <li>Menu com opções saudáveis, veganas e orgânicas.</li>
-                <li>Espaço projetado para conforto e relaxamento.</li>
-            </ul>
-        </section>
-        <section>
-            <h3>Impacto Social Positivo</h3>
-            <ul>
-                <li>Doações para projetos locais de caridade e sustentabilidade.</li>
-                <li>Iniciativas de fidelidade para promover práticas ecológicas.</li>
-            </ul>
-        </section>
+      <header>
+        <img
+          src="../images/de-volta.png"
+          alt="Voltar"
+          class="back-icon"
+          onclick="history.back()"
+        />
+        <h2>Aspectos Sociais da PARJA LDA</h2>
+      </header>
+      <section>
+        <h3>Integração Comunitária</h3>
+        <ul>
+          <li>
+            Parcerias com produtores locais para fortalecer a economia nacional.
+          </li>
+          <li>Eventos culturais, como música ao vivo.</li>
+        </ul>
+      </section>
+      <section>
+        <h3>Inclusão Social</h3>
+        <ul>
+          <li>Ambiente acessível para pessoas com deficiência.</li>
+          <li>Equipa diversificada para promover igualdade e inclusão.</li>
+        </ul>
+      </section>
+      <section>
+        <h3>Educação</h3>
+        <ul>
+          <li>Workshops sobre sustentabilidade e práticas ecológicas.</li>
+          <li>Incentivo ao comércio justo.</li>
+        </ul>
+      </section>
+      <section>
+        <h3>Saúde e Bem-Estar</h3>
+        <ul>
+          <li>Menu com opções saudáveis, veganas e orgânicas.</li>
+          <li>Espaço projetado para conforto e relaxamento.</li>
+        </ul>
+      </section>
+      <section>
+        <h3>Impacto Social Positivo</h3>
+        <ul>
+          <li>Doações para projetos locais de caridade e sustentabilidade.</li>
+          <li>Iniciativas de fidelidade para promover práticas ecológicas.</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
