--- a/pages/topicoCinco.html
+++ b/pages/topicoCinco.html
@@ -8,9 +8,9 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/styles/nav.css" />
-    <link rel="stylesheet" href="/styles/footer.css" />
-    <link rel="stylesheet" href="/styles/topicoCinco.css" />
+    <link rel="stylesheet" href="../styles/nav.css" />
+    <link rel="stylesheet" href="../styles/footer.css" />
+    <link rel="stylesheet" href="../styles/topicoCinco.css" />
     <title>Tópico 4</title>
   </head>
   <body>
@@ -24,10 +24,10 @@
       <div class="opcoes">
         <nav>
           <ul>
-            <li><a href="../home.html">home</a></li>
+            <li><a href="./home.html">home</a></li>
             <li><a href="./sobre-nos.html">Sobre Nós</a></li>
-            <li><a href="../pages/menu.html">Menu</a></li>
-            <li><a href="../playlist.html">Playlist</a></li>
+            <li><a href="./menu.php">Menu</a></li>
+            <li><a href="./playlist.html">Playlist</a></li>
           </ul>
           <div class="linha"></div>
         </nav>
@@ -43,25 +43,25 @@
               </li>
               <li class="show-movel"><a href="">Menu</a></li>
               <li class="show-movel">
-                <a href="../pages/playlist.html">Playlist</a>
+                <a href="./playlist.html">Playlist</a>
               </li>
               <li>
-                <a href="../pages/topicoUm.html">Tópico 1</a>
+                <a href="./topicoUm.html">Tópico 1</a>
               </li>
               <li>
-                <a href="../pages/topicoDois.html">Tópico 2</a>
+                <a href="./topicoDois.html">Tópico 2</a>
               </li>
               <li>
-                <a href="../pages/topicoTres.html">Tópico 3</a>
+                <a href="./topicoTres.html">Tópico 3</a>
               </li>
               <li>
-                <a href="../pages/topicoQuatro.html">Tópico 4</a>
+                <a href="./topicoQuatro.html">Tópico 4</a>
               </li>
               <li>
-                <a href="../pages/topicoCinco.html">Tópico 5</a>
+                <a href="./topicoCinco.html">Tópico 5</a>
               </li>
               <li>
-                <a href="../pages/topicoSeis.html">Tópico 6</a>
+                <a href="./topicoSeis.html">Tópico 6</a>
               </li>
               <li>
                 <a href="">Tópico 7</a>
@@ -75,42 +75,71 @@
       </div>
     </header>
     <main>
-        <header>
-            <h2>Comunicação com o Exterior da PARJA LDA</h2>
-        </header>
-        
-        <section>
-            <h2>Marketing Digital</h2>
-            <ul>
-                <li>Campanhas visuais que conectam o charme da cafetaria à cultura lisboeta.</li>
-                <li>Anúncios segmentados para turistas e locais, promovendo a experiência única de Lisboa.</li>
-                <li>Promoções temáticas sazonais (ex.: verão em Lisboa).</li>
-            </ul>
-        </section>
-        <section>
-            <h3>Engajamento com o Público</h3>
-            <ul>
-                <li>Promoções exclusivas para turistas que visitam o centro histórico.</li>
-                <li>Concursos temáticos, como fotografias com a hashtag da cafetaria em Lisboa.</li>
-                <li>Interação ativa nas redes sociais com dicas sobre eventos e atrações locais.</li>
-            </ul>
-        </section>
-        <section>
-            <h3>Divulgação em Eventos</h3>
-            <ul>
-                <li>Participação em feiras culturais e gastronômicas no centro de Lisboa.</li>
-                <li>Organização de noites temáticas com jazz e degustações de produtos típicos.</li>
-                <li>Parcerias com guias turísticos para incluir a cafetaria nos roteiros.</li>
-            </ul>
-        </section>
-        <section>
-            <h3>Identidade Visual e Branding</h3>
-            <ul>
-                <li>Incorporação de elementos visuais lisboetas, como azulejos e referências à história local.</li>
-                <li>Embalagens personalizadas que destacam o charme e a autenticidade portuguesa.</li>
-                <li>Foco na sustentabilidade e na valorização da cultura local.</li>
-            </ul>
-        </section>
+      <header>
+        <h2>Comunicação com o Exterior da PARJA LDA</h2>
+      </header>
+
+      <section>
+        <h2>Marketing Digital</h2>
+        <ul>
+          <li>
+            Campanhas visuais que conectam o charme da cafetaria à cultura
+            lisboeta.
+          </li>
+          <li>
+            Anúncios segmentados para turistas e locais, promovendo a
+            experiência única de Lisboa.
+          </li>
+          <li>Promoções temáticas sazonais (ex.: verão em Lisboa).</li>
+        </ul>
+      </section>
+      <section>
+        <h3>Engajamento com o Público</h3>
+        <ul>
+          <li>
+            Promoções exclusivas para turistas que visitam o centro histórico.
+          </li>
+          <li>
+            Concursos temáticos, como fotografias com a hashtag da cafetaria em
+            Lisboa.
+          </li>
+          <li>
+            Interação ativa nas redes sociais com dicas sobre eventos e atrações
+            locais.
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3>Divulgação em Eventos</h3>
+        <ul>
+          <li>
+            Participação em feiras culturais e gastronômicas no centro de
+            Lisboa.
+          </li>
+          <li>
+            Organização de noites temáticas com jazz e degustações de produtos
+            típicos.
+          </li>
+          <li>
+            Parcerias com guias turísticos para incluir a cafetaria nos
+            roteiros.
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3>Identidade Visual e Branding</h3>
+        <ul>
+          <li>
+            Incorporação de elementos visuais lisboetas, como azulejos e
+            referências à história local.
+          </li>
+          <li>
+            Embalagens personalizadas que destacam o charme e a autenticidade
+            portuguesa.
+          </li>
+          <li>Foco na sustentabilidade e na valorização da cultura local.</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
