--- a/pages/home.html
+++ b/pages/home.html
@@ -40,8 +40,8 @@
               <li class="show-movel">
                 <a href="./sobre-nos.html">Sobre Nós</a>
               </li>
-              <li class="show-movel"><a href="">Menu</a></li>
-              <li class="show-movel"><a href="">Playlist</a></li>
+              <li class="show-movel"><a href="./menu.php">Menu</a></li>
+              <li class="show-movel"><a href="./playlist.html">Playlist</a></li>
               <li>
                 <a href="./topicoUm.html">Tópico 1</a>
               </li>
