--- a/pages/playlist.html
+++ b/pages/playlist.html
@@ -25,7 +25,7 @@
       <div class="opcoes">
         <nav>
           <ul>
-            <li><a href="../home.html">home</a></li>
+            <li><a href="./home.html">home</a></li>
             <li><a href="./sobre-nos.html">Sobre Nós</a></li>
             <li><a href="./menu.php">Menu</a></li>
             <li><a href="./playlist.html">Playlist</a></li>
@@ -43,7 +43,7 @@
               <li class="show-movel">
                 <a href="./sobre-nos.html">Sobre Nós</a>
               </li>
-              <li class="show-movel"><a href="../pages/menu.html">Menu</a></li>
+              <li class="show-movel"><a href="./menu.php">Menu</a></li>
               <li class="show-movel">
                 <a href="./playlist.html">Playlist</a>
               </li>
