--- a/pages/topicoUm.html
+++ b/pages/topicoUm.html
@@ -37,11 +37,11 @@
           >
           <div id="menu-hidde">
             <ul class="nav-hidde">
-              <li class="show-movel"><a href="/home.html">home</a></li>
+              <li class="show-movel"><a href="./home.html">home</a></li>
               <li class="show-movel">
                 <a href="./sobre-nos.html">Sobre Nós</a>
               </li>
-              <li class="show-movel"><a href="">Menu</a></li>
+              <li class="show-movel"><a href="./menu.php">Menu</a></li>
               <li class="show-movel">
                 <a
                   href="../pages/playlist.html
