--- a/pages/topicoUm.html
+++ b/pages/topicoUm.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../styles/nav.css" />
     <link rel="stylesheet" href="../styles/footer.css" />
     <link rel="stylesheet" href="../styles/topicoUm.css" />
-    <title>Tópico 1</title>
+    <title>Tópico um</title>
   </head>
   <body>
     <header>
